--- a/NLP Techniques/regex_tut.ipynb
+++ b/NLP Techniques/regex_tut.ipynb
@@ -15,14 +15,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chat1 = 'codebasics: you ask lot of questions 😠  1235678912, abc@xyz.com'\n",
-    "chat2 = 'codebasics: here it is: (123)-567-8912, abc@xyz.com'\n",
-    "chat3 = 'codebasics: yes, phone: 1235678912 email: abc@xyz.com'"
+    "chat1 = ' you ask lot of questions 😠  1235678912, abc@xyz.com'\n",
+    "chat2 = ' here it is: (123)-567-8912, abc@xyz.com'\n",
+    "chat3 = ' yes, phone: 1235678912 email: abc@xyz.com'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "['1235678912', 'abc@xyz.com']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,13 +53,13 @@
        "['412889912']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chat3='codebasics: My order 412889912 is having an issue, I was charged 300$ when online it says 280$'\n",
+    "chat3='  My order 412889912 is having an issue, I was charged 300$ when online it says 280$'\n",
     "pattern = 'order[^\\d]*(\\d*)'\n",
     "matches = re.findall(pattern, chat3)\n",
     "matches"
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "'412889912'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "'50'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "'Elon Reeve Musk'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        " 'birth_place': 'Pretoria, Transvaal, South Africa'}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
